fix(styles): overflow auto for wrapper code in Hero

--- a/src/components/pages/home/hero/features/code/code.module.scss
+++ b/src/components/pages/home/hero/features/code/code.module.scss
@@ -37,13 +37,15 @@
   }
 
   pre {
+    height: 100%;
+    overflow: auto;
+
     @include fullhd-down {
       line-height: 0 !important;
     }
 
     @include lg-down {
       font-size: initial;
-      overflow: auto;
     }
   }
 
